--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="container"></div>
+    <div id="page"></div>
     <script src="script.js"></script>
 </body>
 </html>
