--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="Ievgeniia Abdulina">
     <title>Book Shop</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 <body>
     <script type="module" src="script.js"></script>
