--- a/order.html
+++ b/order.html
@@ -8,93 +8,101 @@
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Ievgeniia Abdulina">
     <title>Book Shop | Order</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/styles/order-page.css">
 </head>
 <body>
     <main>
-        <header>
-            <h1 id="title">&bull; Order page &bull;</h1>
-            <p class="order-description">Complete your shopping, leave us an information for delivery and to contact you.</p>
-        </header>
-        <form action="$" method="post" id="order_form">
-            <div class="personal-info">
-                <h3 class="section-title">Personal information</h3>
-                <div class="container">
-                    <div class="form-group">
-                        <label for="">Name</label>
-                        <input type="text" name="name" id="name" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="">Surname</label>
-                        <input type="text" name="surname" id="surname" required>
-                    </div>
-                </div>
-            </div>
-            <div class="delivery-date">
-                <h3 class="section-title">Delivery date</h3>
-                <div class="container">
-                    <div class="form-group">
-                        <label for="">Delivery date(not earlier than next day)</label>
-                        <input type="date" name="" value="" id="">
+        <div id="wrapper">
+            <header>
+                <h1 id="title">&bull; Order page &bull;</h1>
+                <p class="order-description">The last step to complete your purchase, leave us your shipping information and your contact</p>
+            </header>
+            <form action="#" method="post" id="order_form">
+                <div class="personal-info block">
+                    <h3 class="section-title">Personal information</h3>
+                    <div class="container">
+                        <div class="form-group">
+                            <label for="name">Name<span>*</span></label>
+                            <input type="text" name="name" id="name" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="surname">Surname<span>*</span></label>
+                            <input type="text" name="surname" id="surname" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email<span>*</span></label>
+                            <input type="email" name="email" id="email" required>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="address-info">
-                <h3 class="section-title">Delivery address</h3>
-                <div class="container">
-                    <div class="form-group">
-                        <label for="">Street</label>
-                        <input type="text" name="" value="" id="" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="">House number</label>
-                        <input type="number" name="" value="" id="" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="">Flat number</label>
-                        <input type="number" name="" value="" id="" required>
+                <div class="delivery-date block">
+                    <h3 class="section-title">Delivery date</h3>
+                    <div class="container">
+                        <div class="form-group">
+                            <label class="date-input" for="">Delivery date<span>*</span> <i>(not earlier than next day)</i></label>
+                            <input type="date" name="date" value="" id="date" min="2022-11-18" max="2022-11-25" required>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="payment-type">
-                <h3 class="section-title">Payment type</h3>
-                <div class="container">
-                    <div class="form-group">
-                        <input type="radio" name="payment" value="cash-payment" id="cash">
-                        <label for="cash">Cash</label>
-                    </div>
-                    <div class="form-group">
-                        <input type="radio" name="payment" value="card-payment" id="card" checked>
-                        <label for="card">Card</label>
-                    </div>
-                </div>
-            </div>
-            <div class="gifts">
-                <h3 class="section-title">Choose 2 gifts</h3>
-                <p>(optional)</p>
-                <div class="container">
-                    <div class="form-group">
-                        <input type="checkbox" name="gift" value="pack-as-gift" id="pack">
-                        <label for="">Pack as a gift</label>
-                    </div>
-                    <div class="form-group">
-                        <input type="checkbox" name="gift" value="add-postcard" id="postcard">
-                        <label for="">Add postcard</label>
-                    </div>
-                    <div class="form-group">
-                        <input type="checkbox" name="gift" value="add-discaount" id="discount">
-                        <label for="">Provide 2% discount to the nect time</label>
-                    </div>
-                    <div class="form-group">
-                        <input type="checkbox" name="gift" value="branded-item" id="branded">
-                        <label for="">Branded pen or pencil</label>
+                <div class="address-info block">
+                    <h3 class="section-title">Billing address</h3>
+                    <div class="container">
+                        <div class="form-group">
+                            <label for="street">Street<span>*</span></label>
+                            <input type="text" name="street" value="" id="street" required>
+                        </div>
+                        <div class="wrap">
+                            <div class="form-group">
+                                <label for="house">House number<span>*</span></label>
+                                <input type="number" name="house" value="house" id="house" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="flat">Flat number<span>*</span></label>
+                                <input type="number" name="flat" value="flat" id="flat" required>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="order-complete">
-                <input id="submit" type="submit" value="Complete"></input>
-            </div>
-        </form>
+                <div class="payment-type block">
+                    <h3 class="section-title">Payment type</h3>
+                    <div class="container">
+                        <div class="form-group">
+                            <input type="radio" name="payment" value="cash-payment" id="cash">
+                            <label class="radio" for="cash"><span>Cash</span></label>
+                        </div>
+                        <div class="form-group">
+                            <input type="radio" name="payment" value="card-payment" id="card" checked>
+                            <label class="radio" for="card"><span>Card</span></label>
+                        </div>
+                    </div>
+                </div>
+                <div class="gifts block">
+                    <h3 class="section-title">Choose 2 gifts</h3>
+                    <p>(optional)</p>
+                    <div class="container">
+                        <div class="form-group">
+                            <input type="checkbox" name="gift" value="pack-as-gift" id="pack" checked>
+                            <label class="checkbox" for=""><span>Pack as a gift</span></label>
+                        </div>
+                        <div class="form-group">
+                            <input type="checkbox" name="gift" value="add-postcard" id="postcard" checked>
+                            <label class="checkbox" for=""><span>Add postcard</span></label>
+                        </div>
+                        <div class="form-group">
+                            <input type="checkbox" name="gift" value="add-discaount" id="discount">
+                            <label class="checkbox" for=""><span>Provide 2% discount to the nect time</span></label>
+                        </div>
+                        <div class="form-group">
+                            <input type="checkbox" name="gift" value="branded-item" id="branded">
+                            <label class="checkbox" for=""><span>Branded pen or pencil</span></label>
+                        </div>
+                    </div>
+                </div>
+                <div class="order-complete block">
+                    <input id="submit" type="submit" value="Complete"></input>
+                </div>
+            </form>
+        </div>
     </main>
 </body>
 </html>
