feat: implement form validation logic

--- a/order.html
+++ b/order.html
@@ -23,15 +23,13 @@
                     <div class="container">
                         <div class="form-group">
                             <label for="name">Name<span>*</span></label>
-                            <input type="text" name="name" id="name" pattern="/^[a-zA-Z]{4,}$/g" required>
+                            <input type="text" name="name" id="name" minlength="4" pattern="^[a-zA-Z]{4,20}$" pattern-error-message="Name should be a string only and without spaces" required>
+                            <span class="error"></span>
                         </div>
                         <div class="form-group">
                             <label for="surname">Surname<span>*</span></label>
-                            <input type="text" name="surname" id="surname" pattern="/^[a-zA-Z]{5,}$/g" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="email">Email<span>*</span></label>
-                            <input type="email" name="email" id="email" required>
+                            <input type="text" name="surname" id="surname" minlength="5" pattern="^[a-zA-Z]{5,20}$" pattern-error-message="Surname should be a string only and without spaces" required>
+                            <span class="error"></span>
                         </div>
                     </div>
                 </div>
@@ -49,16 +47,19 @@
                     <div class="container">
                         <div class="form-group">
                             <label for="street">Street<span>*</span></label>
-                            <input type="text" name="street" value="" id="street" pattern="/^[a-zA-Z0-9]{5,}$/g" required>
+                            <input type="text" name="street" value="" id="street" minlength="5"  pattern="^[a-zA-Z0-9]+$" pattern-error-message="Street should contain the letters and numbers" required>
+                            <span class="error"></span>
                         </div>
                         <div class="wrap">
                             <div class="form-group">
                                 <label for="house">House number<span>*</span></label>
-                                <input type="number" name="house" value="house" id="house" pattern="/^[0-9]*$/g" required>
+                                <input type="number" name="house" id="house" min="0" max="9999" required>
+                                <span class="error"></span>
                             </div>
                             <div class="form-group">
                                 <label for="flat">Flat number<span>*</span></label>
-                                <input type="number" name="flat" value="flat" id="flat" pattern="/^[^\-][0-9\-]+$/g" required>
+                                <input type="text" name="flat" id="flat" pattern="^[^\-][0-9\-]*$" pattern-error-message="Should be a number" required>
+                                <span class="error"></span>
                             </div>
                         </div>
                     </div>
