feat: add Summarized Information

--- a/order.html
+++ b/order.html
@@ -13,7 +13,11 @@
 <body>
     <main>
         <div id="wrapper">
-            <header>
+            <div id="customer-info" class="info-message">
+                <div class="info-message-icon"></div>
+                <h3>&bull; The order created &bull;</h3>
+            </div>
+            <header id="header">
                 <h1 id="title">&bull; Order page &bull;</h1>
                 <p class="order-description">The last step to complete your purchase, leave us your shipping information and your contact</p>
             </header>
