--- a/order.html
+++ b/order.html
@@ -27,12 +27,12 @@
                     <div class="container">
                         <div class="form-group">
                             <label for="name">Name<span>*</span></label>
-                            <input type="text" name="name" id="name" minlength="4" pattern="^[a-zA-Z]{4,20}$" pattern-error-message="Name should be a string only and without spaces" required>
+                            <input type="text" name="name" id="name" minlength="4" pattern="^[a-zA-Z]{4,}$" pattern-error-message="Name should be a string only and without spaces" required>
                             <span class="error"></span>
                         </div>
                         <div class="form-group">
                             <label for="surname">Surname<span>*</span></label>
-                            <input type="text" name="surname" id="surname" minlength="5" pattern="^[a-zA-Z]{5,20}$" pattern-error-message="Surname should be a string only and without spaces" required>
+                            <input type="text" name="surname" id="surname" minlength="5" pattern="^[a-zA-Z]{5,}$" pattern-error-message="Surname should be a string only and without spaces" required>
                             <span class="error"></span>
                         </div>
                     </div>
@@ -57,12 +57,12 @@
                         <div class="wrap">
                             <div class="form-group">
                                 <label for="house">House number<span>*</span></label>
-                                <input type="number" name="house" id="house" min="0" max="9999" required>
+                                <input type="number" name="house" id="house" min="0" pattern-error-message="Positive numbers only" required>
                                 <span class="error"></span>
                             </div>
                             <div class="form-group">
                                 <label for="flat">Flat number<span>*</span></label>
-                                <input type="text" name="flat" id="flat" pattern="^[^\-][0-9\-]*$" pattern-error-message="Should be a number" required>
+                                <input type="text" name="flat" id="flat" pattern="^[^\-][0-9\-]*$" pattern-error-message="Positive numbers only" required>
                                 <span class="error"></span>
                             </div>
                         </div>
@@ -86,19 +86,19 @@
                     <p>(optional)</p>
                     <div class="container">
                         <div class="form-group">
-                            <input type="checkbox" name="gift" value="pack-as-gift" id="pack" checked>
+                            <input class="check" type="checkbox" name="gift" value="pack-as-gift" id="pack" checked>
                             <label class="checkbox" for=""><span>Pack as a gift</span></label>
                         </div>
                         <div class="form-group">
-                            <input type="checkbox" name="gift" value="add-postcard" id="postcard" checked>
+                            <input class="check" type="checkbox" name="gift" value="add-postcard" id="postcard" checked>
                             <label class="checkbox" for=""><span>Add postcard</span></label>
                         </div>
                         <div class="form-group">
-                            <input type="checkbox" name="gift" value="add-discaount" id="discount">
-                            <label class="checkbox" for=""><span>Provide 2% discount to the nect time</span></label>
+                            <input class="check" type="checkbox" name="gift" value="add-discaount" id="discount">
+                            <label class="checkbox" for=""><span>Provide 2% discount to the next time</span></label>
                         </div>
                         <div class="form-group">
-                            <input type="checkbox" name="gift" value="branded-item" id="branded">
+                            <input class="check" type="checkbox" name="gift" value="branded-item" id="branded">
                             <label class="checkbox" for=""><span>Branded pen or pencil</span></label>
                         </div>
                     </div>
