refactor: change images links

--- a/order.html
+++ b/order.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Ievgeniia Abdulina">
     <title>Book Shop | Order</title>
-    <link rel="stylesheet" type="text/css" href="/styles/order-page.css">
+    <link rel="stylesheet" type="text/css" href="order-page.css">
 </head>
 <body>
     <main>
