fix: local storage total sum, add github link in footer

--- a/order.html
+++ b/order.html
@@ -20,9 +20,10 @@
                     <p>Customer name: <span id="customer-name"></span></p>
                     <p>Delivary address: <span id="customer-address"></span></p>
                     <p>Delivery date: <span id="delivery-date"></span></p>
+                    <p>Total sum: <span id="total-sum"></span></p>
                 </div>
                 <div class="info-buttons">
-                    <input id="change-btn" type="button" value="change" onclick = "window.location.href='./order.html';"/>
+                    <input id="change-btn" type="button" value="change"/>
                     <input id="confirm-btn" onclick= "window.location.href = './index.html';" type="button" value="confirm"/>
                 </div>
             </div>
@@ -118,6 +119,6 @@
             </form>
         </div>
     </main>
-    <script src="./modules/order-form.js"></script>
+    <script type="module" src="./order-form.js"></script>
 </body>
 </html>
